# taskmaster-express

./: .env.example  .gitignore  .tool-versions  CHANGELOG.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  taskmaster-express.code-workspace
.github/workflows/: deploy_test.yml  lint.yml  main.yml  test.yml
api/: pyproject.toml
api/scripts/: launch-api.local.sh  launch-api.prod.sh  lint.sh
api/taskmasterexp/: __init__.py  __main__.py  app.py  settings.py
api/taskmasterexp/auth/: __init__.py  dependencies.py  endpoints.py  fb.py  helper.py  token.py
api/taskmasterexp/chatbot/: assistant.py  client.py  dependencies.py  history.py  messages.py  tools.py  ws.py
api/taskmasterexp/database/: connection.py  dependencies.py  managers.py  models.py  redis.py  seed.py
api/taskmasterexp/database/alembic/: env.py
api/taskmasterexp/database/alembic/versions/: 4563004932e5_email_can_now_be_null.py  6d02dd7f2b6c_add_subscriptions_table.py  7784b898ebe9_add_relationship_between_tasks_and_user.py  9c39ec29582e_add_phone_number_to_user.py  f24d314ab21b_create_tasks_table.py  f494a9f1a212_add_disabled_column_to_user.py
api/taskmasterexp/endpoints/: subscriptions.py  tasks.py  users.py
api/taskmasterexp/paypal/: cli.py  client.py  dependencies.py  schemas.py  webhooks.py
api/taskmasterexp/schemas/: subscriptions.py  tasks.py  users.py
api/taskmasterexp/tests/: conftest.py
api/taskmasterexp/tests/api/: test_auth_endpoints.py  test_paypal_webhook.py  test_subscription_endpoints.py  test_task_endpoints.py  test_user_endpoints.py
api/taskmasterexp/tests/manager/: test_subscription_manager.py  test_task_manager.py
api/taskmasterexp/tests/tools/: test_task_tools.py
docker/: api.dockerfile  web.dockerfile
scripts/: deploy.heroku.prod.sh  deploy.heroku.test.sh  launch-api.local.sh  launch-api.prod.sh  lint.sh  test.sh
taskmaster/: __init__.py  __main__.py  app.py  encoder.py  helpers.py  settings.py
taskmaster/ai/: __init__.py  client.py  dependencies.py  errors.py  messages.py  model.py  ws.py
taskmaster/auth/: cli.py  dependencies.py  endpoints.py  fb.py  token.py
taskmaster/chatbot/: assistant.py  client.py  history.py  messages.py  tools.py  twilio.py  ws.py
taskmaster/database/: cli.py  connection.py  dependencies.py  managers.py  models.py  redis.py
taskmaster/endpoints/: subscriptions.py  tasks.py  users.py
taskmaster/paypal/: cli.py  client.py  schemas.py  webhooks.py
taskmaster/schemas/: subscriptions.py  tasks.py  users.py
taskmaster/tests/: conftest.py
taskmaster/twilio/: dependencies.py  errors.py  utils.py
taskmasterexp/: __main__.py  app.py  encoder.py  helpers.py  settings.py
taskmasterexp/ai/: client.py  dependencies.py  errors.py  messages.py  model.py  tools.py  ws.py
taskmasterexp/auth/: cli.py  dependencies.py  endpoints.py  token.py
taskmasterexp/chatbot/: assistant.py  client.py  errors.py  (+6 more)
web/: package-lock.json  package.json
(+165 files in other folders)
