[tool.poetry]
name = "taskmasterexp"
version = "0.1.0"
description = ""
authors = ["Andres Javier Lopez <code@andresjavierlopez.com>"]
readme = "README.md"
packages = [{include = "taskmasterexp"}]


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.19"
asyncpg = "^0.28.0"
aiosqlite = "^0.20.0"
python-dotenv = "^1.0.1"
greenlet = "^3.0.3"
pyjwt = "^2.8.0"
passlib = "^1.7.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pytest-cov = "^4.1.0"
httpx = "^0.24.1"
pytest-asyncio = "^0.21.0"
alembic = "^1.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
# make it compatible with black
profile = "black"

[tool.pytest.ini_options]
addopts = "--cov=taskmasterexp"
testpaths = "taskmasterexp"
asyncio_mode = "auto"

[tool.coverage.run]
omit = [ "taskmasterexp/tests/*" ]
